--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,10 +28,16 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  analyzer: ^6.4.1
+  build_runner: ^2.4.8
   cupertino_icons: ^1.0.6
+  dio: ^5.4.1
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.10+1
+  json_serializable: ^6.7.1
+  retrofit: ^4.1.0
+  retrofit_generator: ^8.1.0
 
 dev_dependencies:
   flutter_lints: ^3.0.0
@@ -59,7 +65,6 @@ flutter:
     - assets/images/solid_circle_ic.svg
     - assets/images/left_arrow_ic.svg
     - assets/images/right_arrow_ic.svg
-
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
