--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   analyzer: ^6.4.1
   cupertino_icons: ^1.0.6
+  dartz: ^0.10.1
   dio: ^5.4.1
   flutter:
     sdk: flutter
