--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.10+1
+  internet_connection_checker: ^1.0.0+1
   json_annotation: ^4.8.1
   retrofit: ^4.1.0
   retrofit_generator: ^8.1.0
