--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   pretty_dio_logger: ^1.3.1
   retrofit: ^4.1.0
   retrofit_generator: ^8.1.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   build_runner: ^2.4.8
