--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
     sdk: flutter
   flutter_svg: ^2.0.10+1
   freezed: ^2.4.7
+  get_it: ^7.6.7
   internet_connection_checker: ^1.0.0+1
   json_annotation: ^4.8.1
   pretty_dio_logger: ^1.3.1
