--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   get_it: ^7.6.7
   internet_connection_checker: ^1.0.0+1
   json_annotation: ^4.8.1
+  lottie: ^3.1.0
   pretty_dio_logger: ^1.3.1
   retrofit: ^4.1.0
   retrofit_generator: ^8.1.0
