d add new JSON assets
Updated the generated timestamps in the package_config.json and .flutter-plugins-dependencies files to reflect the current time. Also, added new JSON assets (loading.json, error.json, empty.json) and corresponding paths in the assets_manager.dart and pubspec.yaml files.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,12 @@ flutter:
     - assets/images/solid_circle_ic.svg
     - assets/images/left_arrow_ic.svg
     - assets/images/right_arrow_ic.svg
+    - assets/json/empty.json
+    - assets/json/error.json
+    - assets/json/loading.json
+    
+
+  
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
